use multipart upload for model
